--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: James Patrick Horine
 Maintainer: James Patrick Horine <jamespatrickhorine@gmail.com>
 Description: R Package for Fast Feature Selection - (i.e. For When You Have To Explain Things To Your Boss)
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: 
