--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,16 +4,16 @@ Title: R Package for Fast Feature Selection
 Version: 0.1.0
 Author: James Patrick Horine
 Maintainer: James Patrick Horine <jamespatrickhorine@gmail.com>
-Description: R Package for Fast Feature Selection - (i.e. For When You Have To Explain Things To Your Boss)
+Description: R Package for Fast Feature Selection - (i.e. For When You Have To Explain Things To Your Boss).
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends: 
+    R (>= 2.10)
+Imports:
     pbmcapply,
     glmnet,
-    parallel,
-    R (>= 2.10)
-Imports: glmnet
+    parallel
 RoxygenNote: 7.1.2
 Suggests: 
     testthat (>= 3.0.0),
