removed attempts to set random parallel seeds in unit tests and only test that results are between 0 and 1. removed parallel from Imports and added new documentation for cVIP. These clear CMD check messages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ Depends:
     R (>= 2.10)
 Imports:
     pbmcapply,
-    glmnet,
-    parallel
+    glmnet
 RoxygenNote: 7.1.2
 Suggests: 
     testthat (>= 3.0.0),
